@@ -13,6 +13,7 @@
 * Fix bug that occurs when attempting to validate any script on a non-running Script data source, causing it will get into a state where it cannot be re-validated or started
 * Added DataSource lifecycle hooks for initializing and terminated
 * Remove peek method from SerialPortInputStream API
+* Add index to events table to improve query performance
 
 *Version 4.3.3*
 * Upgrade library version to jssc 2.9.4
